--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,1 +1,9 @@
+@use "_partials/fonts";
 @use "_partials/reset";
+
+body {
+	font-family: "inter";
+	font-weight: 400;
+	line-height: 1.5;
+	font-size: 1rem;
+}
